# HeroesVsVillainsBOT

./: .gitignore  CMakeLists.txt  MyBot.cpp  MyBot.vcxproj  MyBot.vcxproj.filters  README.md  envars.h  management.cpp  utility.h
include/: initialization.h  management.h  rvbenvars.h
src/: initialization.cpp  main.cpp  management.cpp
